--- a/Todo/AndroidManifest.xml
+++ b/Todo/AndroidManifest.xml
@@ -8,36 +8,37 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name=".TodosOverviewActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".TodoDetailActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize"
-            android:parentActivityName=".TodosOverviewActivity" >
+            android:parentActivityName=".TodosOverviewActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" >
         </activity>
-        
         <activity
             android:name=".TodoPlayActivity"
             android:parentActivityName=".TodosOverviewActivity" >
         </activity>
-        
+
         <provider
             android:name=".contentprovider.TodoContentProvider"
-            android:authorities="ch.trillian.todo.contentprovider" 
-        	android:exported="false" />
+            android:authorities="ch.trillian.todo.contentprovider"
+            android:exported="false" />
     </application>
 
 </manifest>
